Make ReactiveDefaultBookmarkManager return a copy of bookmarks (#2769)
This update makes sure that the `ReactiveDefaultBookmarkManager` returns an unmodifiable copy of its current bookmarks instead of returning a view of the bookmarks.